# livectf

./: .env  .gitignore  Cargo.toml  Makefile  README.md  compose.yml
CHALLENGE_TEST_AREA/: hello.c
RELEASE/archives/b935dc4d-52a4-41cd-aa65-78bef5c68120/chall/: Dockerfile
RELEASE/static/css/: styles_challenges.css  styles_register.css  styles_scoreboard.css  styles_sheep_center.css
RELEASE/static/css/register/: styles.css
RELEASE/static/js/: login.js  sheep_center.js
RELEASE/static/static/css/: styles_404.css  styles_sheep_center.css
RELEASE/static/static/js/: register.js  sheep_center.js
migrations/: init.sql
src/: main.rs  notifier.rs  utils.rs
src/challenge_upload_handler/: mod.rs
src/database/: challenge.rs  deploy_log.rs  mod.rs  solve_history.rs  user.rs
src/deployer/: mod.rs
src/flag_receiver/: mod.rs
src/timer/: mod.rs
src/web_interface/: challenge.rs  mod.rs  user.rs
src/web_interface/static/: challenges.js
src/web_interface/static/css/: styles.css  styles_challenges.css  styles_index.css  styles_login.css  styles_scoreboard.css  styles_sheep_center.css
src/web_interface/static/css/login/: styles.css
src/web_interface/static/js/: challenges.js  login.js  register.js  sheep_center.js
