[package]
name = "livectf"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.8.0"
actix-web-extras = "0.1.0"
base64 = "0.22.1"
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
futures-util = "0.3.30"
hmac = "0.12.1"
jwt = "0.16.0"
maud = { version = "0.26.0", features = ["actix-web"] }
rand = "0.8.5"
regex = "1.10.5"
serde = "1.0.204"
serde_json = "1.0.120"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std"] }
tempdir = "0.3.7"
tokio = { version = "1.39.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
